--- a/api/package.json
+++ b/api/package.json
@@ -8,6 +8,7 @@
   },
   "private": true,
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "uuid": "^9.0.1"
